infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.tohshine.me 
      http:
        paths:
          - path: /api/user/?(.*)
            backend:
              serviceName: mauth-srv
              servicePort: 3000
          - path: /api/profile/?(.*)
            backend:
              serviceName: mprofile-srv
              servicePort: 3000
          - path: /api/product/?(.*)
            backend:
              serviceName: mproduct-srv
              servicePort: 3000
          - path: /api/order/?(.*)
            backend:
              serviceName: morder-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: mclient-srv
              servicePort: 3000
